<resources>
    <string name="app_name">Movil</string>
    <string name="home">Home</string>
    <string name="user">Users</string>
    <string name="product">Products</string>
    <string name="cart">Cart</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="registro">Registro</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>